// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form matches snapshot for initial render 1`] = `
<div>
  <form>
    <div
      class="mb-8"
    >
      <h2
        class="text-2xl font-semibold mb-4 text-bodyText"
      >
        Test Question
      </h2>
      <div
        class="mb-4"
      >
        <label
          class="block text-bodyText text-sm font-bold mb-2"
          for="test_field"
        >
          Test Field
        </label>
        <input
          class="appearance-none border rounded w-full py-2 px-3 text-bodyText focus:ring-2 focus:ring-primary focus:border-primary outline-none transition-all duration-200"
          id="test_field"
          type="text"
          value=""
        />
      </div>
      <div
        class="mb-4"
      >
        <label
          class="block text-bodyText text-sm font-bold mb-2"
          for="test_dropdown"
        >
          Test Dropdown
        </label>
        <select
          class="border rounded w-full py-2 px-3 text-bodyText focus:ring-2 focus:ring-primary focus:border-primary outline-none transition-all duration-200 cursor-pointer"
          id="test_dropdown"
        >
          <option
            value=""
          >
            Select 
            Test Dropdown
          </option>
          <option
            value="Option 1"
          >
            Option 1
          </option>
          <option
            value="Option 2"
          >
            Option 2
          </option>
        </select>
      </div>
    </div>
    <button
      class="py-[7px] px-[30px] rounded-3xl transition-all duration-200 font-bold bg-primary text-white hover:bg-white hover:text-bodyText border-2 border-primary w-full  "
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form matches snapshot with error state 1`] = `
<div>
  <form>
    <div
      class="mb-8"
    >
      <h2
        class="text-2xl font-semibold mb-4 text-bodyText"
      >
        Test Question
      </h2>
      <div
        class="mb-4"
      >
        <label
          class="block text-bodyText text-sm font-bold mb-2"
          for="test_field"
        >
          Test Field
        </label>
        <input
          class="appearance-none border rounded w-full py-2 px-3 text-bodyText focus:ring-2 focus:ring-primary focus:border-primary outline-none transition-all duration-200"
          id="test_field"
          type="text"
          value=""
        />
      </div>
      <div
        class="mb-4"
      >
        <label
          class="block text-bodyText text-sm font-bold mb-2"
          for="test_dropdown"
        >
          Test Dropdown
        </label>
        <select
          class="border rounded w-full py-2 px-3 text-bodyText focus:ring-2 focus:ring-primary focus:border-primary outline-none transition-all duration-200 cursor-pointer"
          id="test_dropdown"
        >
          <option
            value=""
          >
            Select 
            Test Dropdown
          </option>
          <option
            value="Option 1"
          >
            Option 1
          </option>
          <option
            value="Option 2"
          >
            Option 2
          </option>
        </select>
      </div>
    </div>
    <button
      class="py-[7px] px-[30px] rounded-3xl transition-all duration-200 font-bold bg-primary text-white hover:bg-white hover:text-bodyText border-2 border-primary w-full bg-red-500 border-red-500 text-white hover:bg-white hover:text-red-500 cursor-not-allowed "
      disabled=""
      type="submit"
    >
      Please complete form
    </button>
  </form>
</div>
`;

exports[`Form matches snapshot with filled form data 1`] = `
<div>
  <form>
    <div
      class="mb-8"
    >
      <h2
        class="text-2xl font-semibold mb-4 text-bodyText"
      >
        Test Question
      </h2>
      <div
        class="mb-4"
      >
        <label
          class="block text-bodyText text-sm font-bold mb-2"
          for="test_field"
        >
          Test Field
        </label>
        <input
          class="appearance-none border rounded w-full py-2 px-3 text-bodyText focus:ring-2 focus:ring-primary focus:border-primary outline-none transition-all duration-200"
          id="test_field"
          type="text"
          value="test value"
        />
      </div>
      <div
        class="mb-4"
      >
        <label
          class="block text-bodyText text-sm font-bold mb-2"
          for="test_dropdown"
        >
          Test Dropdown
        </label>
        <select
          class="border rounded w-full py-2 px-3 text-bodyText focus:ring-2 focus:ring-primary focus:border-primary outline-none transition-all duration-200 cursor-pointer"
          id="test_dropdown"
        >
          <option
            value=""
          >
            Select 
            Test Dropdown
          </option>
          <option
            value="Option 1"
          >
            Option 1
          </option>
          <option
            value="Option 2"
          >
            Option 2
          </option>
        </select>
      </div>
    </div>
    <button
      class="py-[7px] px-[30px] rounded-3xl transition-all duration-200 font-bold bg-primary text-white hover:bg-white hover:text-bodyText border-2 border-primary w-full  "
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;
